--- a/module-2-solution/index.html
+++ b/module-2-solution/index.html
@@ -3,40 +3,50 @@
 
 <head>
 
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="UTF-8">
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="mycss.css">
-	
+	<link rel="stylesheet" type="text/css" href="css/mycss.css">
+
 	<title>Module 2 solution</title>
 
 </head>
 
 <body>
 
-	<header>
+	<h1>Our Sections</h1>
+	
+	<div class="row">
 
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-12" id="encabezado">
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			
+			<p>
+				<span class="title" id="title1">Section 1</span>
+				<span class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus diam leo, malesuada ac viverra ut, posuere vel ex. In sollicitudin diam eu lectus tristique mollis. Nulla pretium efficitur enim eget faucibus. Praesent facilisis vulputate nulla, finibus pharetra erat feugiat at. Aliquam rutrum gravida mi, tempor tempor lacus pretium nec. Sed urna diam, volutpat pharetra ante sed, vehicula convallis tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer massa odio, cursus et ante sed, sollicitudin faucibus augue.</span>
+			</p>
 
-					<h1>Hello coursera!</h1>
-
-				</div>
-			</div>
 		</div>
 
-	</header>
+		<div class="col-lg-4 col-md-6 col-sm-12">
+
+			<p>
+				<span class="title" id="title2">Section 2</span>
+				<span class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus diam leo, malesuada ac viverra ut, posuere vel ex. In sollicitudin diam eu lectus tristique mollis. Nulla pretium efficitur enim eget faucibus. Praesent facilisis vulputate nulla, finibus pharetra erat feugiat at. Aliquam rutrum gravida mi, tempor tempor lacus pretium nec. Sed urna diam, volutpat pharetra ante sed, vehicula convallis tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer massa odio, cursus et ante sed, sollicitudin faucibus augue.</span>
+			</p>
+
+		</div>
+		
+		<div class="col-lg-4 col-md-12 col-sm-12">
+
+			<p>
+				<span class="title" id="title3">Section3</span>
+				<span class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus diam leo, malesuada ac viverra ut, posuere vel ex. In sollicitudin diam eu lectus tristique mollis. Nulla pretium efficitur enim eget faucibus. Praesent facilisis vulputate nulla, finibus pharetra erat feugiat at. Aliquam rutrum gravida mi, tempor tempor lacus pretium nec. Sed urna diam, volutpat pharetra ante sed, vehicula convallis tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer massa odio, cursus et ante sed, sollicitudin faucibus augue.</span>
+			</p>
+
+		</div>
+
+	</div>
 	
-
-
-
-
-	<!-- Jquery (Bootstrap) -->
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery-3.5.0.js"></script>
-	<script src="myscript.js"></script>
 
 </body>
 
